app/components/header/header.module.scss
@use "../../../styles/mixins.scss" as mixins;

.header {
	align-items: center;
	background: var(--bg-color);
	box-shadow: 0 0 15px 0 black;
	display: flex;
	height: 60px;
	justify-content: space-between;
	text-align: center;

	> a {
		color: var(--text-color);
		font-weight: 800;
		font-size: 23px;
		text-transform: uppercase;
		z-index: 5;
	}

	> nav {
		display: flex;
		flex-direction: row;
		gap: 10px;
		> ul {
			align-items: center;
			justify-content: center;
			display: flex;
			flex-direction: row;
			gap: 10px;
			list-style-type: none;
			margin: 0;
			padding-inline-start: 0;
			> li {
				display: inline;
				> a {
					background-color: var(--btn-color);
					border-radius: 6px;
					color: var(--text-color);
					font-size: 16px;
					font-weight: 600;
					padding: 5px 10px 5px 10px;
					text-transform: uppercase;
					width: 30px;

					&:hover {
						border-bottom: solid 4px var(--unknown1);
						transition: 200ms;
					}
				}
			}
		}
		> button {
			display: flex;
			align-items: center;
			justify-content: center;
			flex-direction: column;

			background: none;
			border: none;
			padding: 0;
			cursor: pointer;

			z-index: 5;

			span {
				background-color: var(--text-color);
				border-radius: 3px;
				display: block;
				height: 5px;
				margin: 4px 0;
				width: 40px;
				align-self: flex-end;

				transition: all 0.3s ease-in-out;
			}

			@include mixins.desktop {
				display: none;
			}
		}
	}

	nav.open {
		> button {
			> span {
				&:first-child {
					transform: translateY(13px) rotate(-45deg);
				}
				&:nth-child(2) {
					width: 0;
				}
				&:last-child {
					transform: translateY(-13px) rotate(45deg);
				}
			}
		}
		> ul {
			transform: translate(0%, 0);
		}
	}

	@include mixins.mobile {
		> nav {
			> ul {
				z-index: 1;

				width: 100%;
				height: 100vh;
				position: absolute;

				top: 0;
				left: 0;

				background: var(--bg-color);
				list-style-type: none;
				-webkit-font-smoothing: antialiased;
				/* to stop flickering of text in safari */

				transform-origin: 0% 0%;
				transform: translate(100%, 0);

				transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);

				flex-direction: column;
				gap: 30px;

				> li {
					display: flex;
					align-items: center;
					justify-content: space-between;

					width: 50%;
					> a {
						display: block;
						width: 100%;

						&:hover {
							border-bottom: none !important;
						}
					}
				}
			}
		}
	}
}

.currentPg {
	> a {
		background: var(--btn-2-color) !important;
		color: var(--bg-color) !important;

		&:hover {
			border-bottom: solid 4px #d36868 !important;
		}
	}
}

